# supaneon-sync

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  COPILOT_PRODUCTION_SUPER_PROMPT.md  README.md  RUNBOOK.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  test_conn.py  test_uuid_neon.py
.agent/rules/: terminal-interaction.md  verify.md
.agent/workflows/: check-all-passed.md
.github/: copilot-instructions.md
.github/workflows/: backup.yml  ci.yml  pipeline.yml.exam  pipelineX.yml.exam  restore-test.yml  test-submission.yml.exam  test.yml.exam
docs/: status.md
src/exam/: X1backup.py  X2backup.py
src/supaneon_sync/: X1backup.py  __main__.py  backup.py  config.py  exceptions.py  healthcheck.py  neon.py  restore.py  utils.py
tests/: test_backup.py  test_config.py  test_ipv4_fix.py  test_neon.py  test_rotation.py
