[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supaneon-sync"
version = "0.1.0"
description = "Supabase -> Neon logical backup and restore automation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "supaneon"}]

[project.dependencies]
requests = "^2.31"
python-dotenv = "^1.0"
typer = "^0.9"
psycopg[binary] = "^3.2"

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "mypy", "pre-commit"]

[project.scripts]
supaneon-sync = "supaneon_sync.__main__:app"
